# Atlas

./: .gitignore  MANIFEST.in  README.md  README.txt  heli_opt.py  makeplot.py  run.py  setup.cfg  setup.py
MATLAB/: 1.mat  AeroCalc.m  ChordProperties.m  DiscretizeProperties.m  DriveTubeDesign.m  FailureCalc.m  HeliCalc.m  HeliOpt.m  HeliOptValidation.m  PrepregProperties.m  RotorPostDesign.m  SparProperties.m  StrCalc.m  VortexWakeCover.m  WireProperties.m  dragCoefficient.m  dragCoefficientFit.m  dragCylinder.m  dragSweep.m  runChordProperties.m  runFile.m  runFileDriveTube.m  runFileValidation.m  runRotorPostFile.m  runSparProperties.m  rvi.m  testElliptic.m  testRing.m  testRing.mat  testWake.m
MATLAB/raw/: AeroCalc.txt  ChordProperties.txt  DiscretizeProperties.txt  FailureCalc.txt  HeliCalc.txt  MaterialFailure.txt  PrePregProperties.txt  SparProperties.txt  StrCalc.txt  VortexWakeCover.txt  WireProperties.txt  dragcoefficient.txt  dragcoefficientfit.txt  dragcylinder.txt  frictionCoefficient.txt  testvals.txt  todo.txt  torsionalBucklingFailure.txt
docs/: conf.py  index.rst  overview.rst  pkgdocs.rst  running.rst  running_multi.rst  srcdocs.rst  structure.rst  usage.rst
examples/: heli_opt.py
src/Atlas/: __init__.py  aero.py  aerostructural.py  build  coefficients.py  configuration.py  failure.py  flat.py  heli_opt.py  heli_opt_complex.py  heli_opt_multipoint.py  helicalc.py  lift_drag.py  properties.py  structures.py  thrust.py  time_vortex.py  util.py  vortex.py  vortexC.c  vortexC.pyx
src/Atlas/test/: FEM.mat  HeliCalc.mat  StrCalc.mat  aero.mat  (+20 more)
